--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -19,8 +19,110 @@
     font-family: 'DM_Sans_ExtraBold';
     src: url(assets/fonts/DMSans-ExtraBold.ttf);
 }
+a{
+    text-decoration: none;
+    color: initial;
+}
 
-p{
-    font-family: "DM_Sans_ExtraBold";
-    font-size: 50px;
+
+.menu{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    height: 100px;
+    padding: 0px 100px;
+    background-color: white;
+    position: relative;
+    box-shadow: 0px 4px 8px 0px rgba(170, 170, 170, 0.1);
+}
+.menu:after{
+    content: '';
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(to right, #FFFFFF, #CACACA, #FFFFFF);
+    pointer-events: none;
+}
+.menuSchoolName{
+    width: 176px;
+}
+.menuItems{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 60px;
+    height: 100%;
+}
+.linkContainer{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    justify-content: center;
+}
+.menuLinks{
+    cursor: pointer;
+    color: #757575;
+    font-family: 'ER_Garamond_Medium';
+    font-size: 19px;
+    transition: all 0.1s;
+}
+.menuLinks:hover{
+    color: black;
+}
+.activeMenuLink{
+    color: black;
+}
+.activeLinkIndicator{
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 4px;
+    background-color: #FFA314;
+    width: 100%;
+}
+
+
+
+
+.expandableMenu{
+    display: none;
+}
+.expandableMenuIcon{
+    display: none;
+}
+.closeExpandableMenuIcon{
+    display: none;
+}
+
+
+
+
+
+.menuFirstHalf, .menuSecondHalf{
+    filter: brightness(100) contrast(0) opacity(0.04);
+}
+@media screen and (max-width: 920px){
+    .menuItems{
+        display: none;
+    }
+    .expandableMenu{
+        display: flex;
+    }
+    .expandableMenuIcon{
+        width: 26px;
+        height: 26px;
+        display: flex;
+    }
+    .closeExpandableMenuIcon{
+        height: 18px;
+        width: 18px;
+        display: flex;
+    }
 }
