--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -23,9 +23,18 @@ a{
     text-decoration: none;
     color: initial;
 }
+body{
+    height: 1000px;
+}
 
-
+.menuContainer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 100dvh;
+}
 .menu{
+    z-index: 1000;
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -49,6 +58,7 @@ a{
 }
 .menuSchoolName{
     width: 176px;
+    z-index: 999;
 }
 .menuItems{
     display: flex;
@@ -56,6 +66,7 @@ a{
     align-items: center;
     gap: 60px;
     height: 100%;
+    z-index: 999;
 }
 .linkContainer{
     position: relative;
@@ -87,42 +98,152 @@ a{
     background-color: #FFA314;
     width: 100%;
 }
-
-
-
-
 .expandableMenu{
     display: none;
 }
 .expandableMenuIcon{
+    z-index: 999;
+    cursor: pointer;
     display: none;
+    height: 32px;
+    width: 32px;
 }
 .closeExpandableMenuIcon{
+    cursor: pointer;
+    height: 18px;
+    width: 18px;
     display: none;
 }
-
-
-
-
-
 .menuFirstHalf, .menuSecondHalf{
     filter: brightness(100) contrast(0) opacity(0.04);
 }
-@media screen and (max-width: 920px){
+
+
+@media screen and (max-width: 1024px){
+    .menu{
+        z-index: 100;
+        display: flex;
+        flex-direction: row;
+            width: 100%;
+        align-items: center;
+        justify-content: space-between;
+        height: 100px;
+        padding: 0px 70px;
+        background-color: white;
+        position: relative;
+        box-shadow: 0px 4px 8px 0px rgba(170, 170, 170, 0.1);
+    }
+}
+
+
+@media screen and (max-width: 950px){
     .menuItems{
         display: none;
     }
-    .expandableMenu{
-        display: flex;
-    }
     .expandableMenuIcon{
-        width: 26px;
-        height: 26px;
-        display: flex;
-    }
-    .closeExpandableMenuIcon{
-        height: 18px;
-        width: 18px;
         display: flex;
     }
 }
+
+
+@media screen and (max-width: 500px){
+    .menu{
+        z-index: 1000;
+        top: 0;
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        align-items: center;
+        justify-content: space-between;
+        height: 70px;
+        padding: 0px 20px;
+        background-color: white;
+        position: relative;
+        box-shadow: none;
+    }
+    .menuSchoolName{
+        width: 129px;
+    }
+    .expandableMenuIcon{
+        display: flex;
+        height: 26px;
+        width: 26px;
+    }
+    .closeExpandableMenuIcon{
+        cursor: pointer;
+        height: 32px;
+        width: 32px;
+        display: none;
+        border: 1px solid #4D4D4D;
+        border-radius: 50%;
+        padding: 6px;
+    }
+
+    
+    .expandableMenu{
+        z-index: 99;
+        top: 0;
+        position: relative;
+        display: none;
+        flex-direction: column;
+        flex: 1;
+        background-color: #0B0B0B;
+        overflow: hidden;
+    }
+    .expandableNavLinks{
+        padding: 40px 25px;
+        gap: 16px;
+        display: flex;
+        flex-direction: column;
+    }
+    .menuFirstHalf{
+        width: 265px;
+        object-fit: cover;
+        bottom: 0;
+        left: 0;
+        transform: translateX(-50%);
+    }
+    .menuSecondHalf{
+        bottom: 0;
+        width: 463px;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        transform: translateX(55%);
+    }
+    .expandableMenuLinks{
+        font-size: 36px;
+        letter-spacing: 1px;
+        color: white;
+    }
+}   
+
+
+
+
+
+    .blackMenu{
+        background-color: #0B0B0B;
+    }
+    .blackMenu:after{
+        content: '';
+        width: 100%;
+        height: 1px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background: linear-gradient(to right, #00000000, rgba(202, 202, 202, 0.2), #00000000);
+        pointer-events: none;
+    }
+    .disableMenuIcon{
+        display: none;
+    }
+    .expandMenu{
+        display: flex;
+    }
+    .enabledClosingIcon{
+        display: flex;
+    }
+    .invertText{
+        filter: invert(1);
+    }
