--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -205,6 +205,7 @@ body{
         font-size: 36px;
         letter-spacing: 1px;
         color: white;
+        font-family: "ER_Garamond_Medium";
     }
 }
 
