--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -237,6 +237,7 @@ body{
         cursor: pointer;
         height: 32px;
         width: 32px;
+        margin-right: 0px;
         display: none;
         border: 1px solid #4D4D4D;
         border-radius: 50%;
