--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -109,6 +109,9 @@ body{
     height: 32px;
     width: 32px;
 }
+.expandableMenuLinks{
+    opacity: 0.2;
+}
 .closeExpandableMenuIcon{
     cursor: pointer;
     height: 18px;
@@ -476,5 +479,23 @@ body{
             opacity: 1;
             transform: translateY(0%);
             transform-origin: top;
+        }
+    }
+
+
+    .showLink{
+        animation-name: showLink;
+        animation-duration: 0.5s;
+        animation-timing-function: ease-out;
+        animation-fill-mode: forwards;
+        animation-iteration-count: 1;
+    }
+    @keyframes showLink {
+        0%{
+            opacity: 0.2;
+        }
+        100%{
+            opacity: 1;
+
         }
     }
