--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -37,7 +37,6 @@ body{
     width: 100%;
     display: flex;
     flex-direction: column;
-    height: 100dvh;
 }
 .menu{
     z-index: 1000;
@@ -242,9 +241,9 @@ body{
         position: relative;
         display: none;
         flex-direction: column;
-        flex: 1;
         background-color: #0B0B0B;
         overflow: hidden;
+        height: 100vh;
     }
     .expandableNavLinks{
         padding: 40px 70px;
