--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -156,8 +156,39 @@ body{
 .headerImage{
     opacity: 0;
 }
+.hideHeader{
+    animation-name: hideHeader;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+    opacity: 1; 
+}
+@keyframes hideHeader {
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+
+    }
+}
 .showHeader{
+    animation-name: showHeader;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
     opacity: 1;
+}
+@keyframes showHeader {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+
+    }
 }
 .dotsContainer{
     bottom: 0;
