--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scrollbar-color: black white;
+    scrollbar-width:thin;;
 }
 @font-face {
     font-family: 'ER_Garamond_Medium';
@@ -19,16 +21,19 @@
     font-family: 'DM_Sans_ExtraBold';
     src: url(assets/fonts/DMSans-ExtraBold.ttf);
 }
+@font-face {
+    font-family: 'Newsreader_Medium';
+    src: url(assets/fonts/Newsreader_36pt-Medium.ttf);
+}
 a{
     text-decoration: none;
     color: initial;
 }
 body{
-    overflow-x:hidden;
+    overflow-x: hidden;
     position: relative;
     height: 10000px;
 }
-
 .menuContainer{
     z-index: 1000;
     top: 0;
@@ -37,6 +42,7 @@ body{
     width: 100%;
     display: flex;
     flex-direction: column;
+    backdrop-filter: blur(2px);
 }
 .menu{
     z-index: 1000;
@@ -47,8 +53,7 @@ body{
     justify-content: space-between;
     height: 100px;
     padding: 0px 100px;
-    background-color: rgba(255, 255, 255, 0.94);
-    backdrop-filter: blur(6px);
+    background-color: rgba(255, 255, 255, 0.95);
     box-shadow: 0px 4px 8px 0px rgba(170, 170, 170, 0.1);
 }
 .menu:after{
@@ -233,12 +238,84 @@ body{
     z-index: 98;
 }
 
+.communityContainer{
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    padding: 0px 100px;
+    gap: 28px;
+}
+.communityHeader{
+    font-size: 56px;
+    font-weight: 500;
+    font-family: "ER_Garamond_Medium";
+}
+.communityContent{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 50px;
+    height: 442px
+}
+.communityImage{
+    width: 658px;
+    height: 442px;
+    object-fit: cover;
+}
+.communityText{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+}
+.communityStatsContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
+.communityNumbers{
+    font-family: 'Newsreader_Medium';
+    font-weight: 500;
+    font-size: 52px;
+    color: #F7A524;
+}
+.communityStat{
+    font-size: 18px;
+    font-family: 'DM_Sans_ExtraBold';
+}
 
 
-@media screen and (max-width: 1024px){
+
+@media screen and (max-width: 1070px){
     .menu{
         padding: 0px 70px;
         box-shadow: none;
+    }
+
+    .communityContainer{
+        margin-top: 80px;
+        padding: 0px 70px;
+        gap: 28px;
+    }
+    .communityContent{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 40px;
+        height: 400px
+    }
+    .communityImage{
+        width: 600px;
+        height: 400px;
+    }
+    .communityStatsContainer{
+        gap: 4px;
+    }   
+    .communityNumbers{
+        font-size: 48px;
+    }
+    .communityStat{
+        font-size: 17px;
     }
 }
 
@@ -304,6 +381,36 @@ body{
         color: white;
         font-family: "ER_Garamond_Medium";
     }
+
+
+    .communityContainer{
+        margin-top: 80px;
+        padding: 0px 70px;
+        gap: 28px;
+    }
+    .communityContent{
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        gap: 40px;
+        height: auto;
+    }
+    .communityText{
+        gap: 30px;
+    }
+    .communityImage{
+        width: 100%;
+        height: auto;
+    }
+    .communityStatsContainer{
+        gap: 4px;
+    }   
+    .communityNumbers{
+        font-size: 52px;
+    }
+    .communityStat{
+        font-size: 18px;
+    }
 }
 
 
@@ -358,6 +465,37 @@ body{
     }
     .headerImage{
         mask-image: linear-gradient(rgba(0, 0, 0, 1) 40%, rgba(0, 0, 0, 0) 90%);
+    }
+
+
+    .communityContainer{
+        margin-top: 50px;
+        padding: 0px 20px;
+        gap: 28px;
+    }
+    .communityContent{
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        gap: 50px;
+        height: auto;
+    }
+    .communityText{
+        gap: 30px;
+        padding-left: 5px;
+    }
+    .communityImage{
+        width: 100%;
+        height: auto;
+    }
+    .communityStatsContainer{
+        gap: 4px;
+    }   
+    .communityNumbers{
+        font-size: 48px;
+    }
+    .communityStat{
+        font-size: 17px;
     }
 }   
 
