--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -283,6 +283,58 @@ body{
     font-family: 'DM_Sans_ExtraBold';
 }
 
+.principleContainer{
+    margin-top: 80px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 60px;
+    padding: 0px 100px 80px 100px;
+    position: relative;
+}
+.principleContainer:after{
+    content: "";
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);;
+    position: absolute;
+    bottom: 0;
+}
+.principleQuotedContainer{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+    height: 100%;
+}
+.principleMessage{
+    font-weight: 500;
+    font-family: 'ER_Garamond_Medium';
+    font-size: clamp(30px, 3vw ,48px);
+    max-width: 658px;
+    min-width: 450px;
+    line-height: 120%;
+    z-index: 100;
+}
+.quote{
+    width: 113px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    transform: translateX(-32px) translateY(-58px);
+}
+.principleImage{
+    max-width: 645px;
+    min-width: 350px;
+}
+.principleName{
+    font-size: clamp(15px, 1.5vw ,18px);
+    font-family: 'DM_Sans_ExtraBold';
+    color: #484848;
+}
+
 
 
 @media screen and (max-width: 1070px){
@@ -316,6 +368,41 @@ body{
     .communityStat{
         font-size: 17px;
     }
+
+    .principleContainer{
+        margin-top: 100px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        gap: 50px;
+        padding: 0px 70px 80px 70px;
+        position: relative;
+    }
+    .principleQuotedContainer{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        gap: 28px;
+        height: 100%;
+    }
+    .principleMessage{
+        font-size: clamp(30px, 3vw ,40px);
+        max-width: 658px;
+        min-width: 350px;
+        line-height: 120%;
+    }
+    .quote{
+        width: 97px;
+        transform: translateX(-32px) translateY(-58px);
+    }
+    .principleImage{
+        max-width: 387px;
+        min-width: 350px;
+    }
+    .principleName{
+        font-size: clamp(15px, 1.5vw ,17px);
+    }
 }
 
 
@@ -328,12 +415,12 @@ body{
     }
     .menu{
         height: 100px;
-        padding: 0px 70px;
+        padding: 0px 50px;
         box-shadow: none;
     }
     .closeExpandableMenuIcon{
         cursor: pointer;
-        margin-right: 16px;
+        margin-right: 10px;
         height: 34px;
         width: 34px;
         display: none;
@@ -353,7 +440,7 @@ body{
         height: 100vh;
     }
     .expandableNavLinks{
-        padding: 40px 70px;
+        padding: 40px 50px;
         gap: 16px;
         display: flex;
         opacity: 0;
@@ -384,7 +471,7 @@ body{
 
     .communityContainer{
         margin-top: 80px;
-        padding: 0px 70px;
+        padding: 0px 50px;
         gap: 28px;
     }
     .communityContent{
@@ -405,11 +492,48 @@ body{
         gap: 4px;
     }   
     .communityNumbers{
-        font-size: 52px;
+        font-size: 60px;
     }
     .communityStat{
         font-size: 18px;
     }
+
+    .principleContainer{
+        margin-top: 80px;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: space-between;
+        gap: 80px;
+        padding: 0px 50px 80px 50px;
+        position: relative;
+    }
+    .principleQuotedContainer{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        height: 100%;
+    }
+    .principleMessage{
+        font-size: 36px;
+        max-width: 100%;
+        min-width: 100%;
+        line-height: 120%;
+    }
+    .principleImage{
+        max-width: 100%;
+        min-width: 100%;
+        width: 100%;
+    }
+    .principleName{
+        font-size: 17px;
+    }
+    .quote{
+        width: 85px;
+        transform: translateX(-20px) translateY(-50px);
+    }
+    
 }
 
 
@@ -498,6 +622,45 @@ body{
     }
     .communityStat{
         font-size: 18px;
+    }
+
+    .principleContainer{
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: space-between;
+        gap: 80px;
+        padding: 0px 20px 55px 20px;
+        position: relative;
+    }
+    .principleQuotedContainer{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        height: 100%;
+    }
+    .principleMessage{
+        padding-left: 5px;
+        font-size: 28px;
+        max-width: 100%;
+        min-width: 100%;
+        line-height: 120%;
+    }
+    .principleImage{
+        max-width: 100%;
+        min-width: 100%;
+        width: 100%;
+    }
+    .principleName{
+        padding-left: 5px;
+        padding-right: 5px;
+        font-size: 14px;
+    }
+    .quote{
+        width: 68px;
+        transform: translateX(-6px) translateY(-36px);
     }
 }   
 
