--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -259,7 +259,16 @@ body{
 .communityImage{
     width: 658px;
     height: 442px;
+    overflow: hidden;
+}
+.communityImage:hover img{
+    scale: 1.02;
+}
+.communityImage img{
+    width: 100%;
+    height: 100%;
     object-fit: cover;
+    transition: all 0.25s;
 }
 .communityText{
     display: flex;
@@ -283,6 +292,9 @@ body{
     font-family: 'DM_Sans_ExtraBold';
 }
 
+
+
+
 .principleContainer{
     margin-top: 80px;
     display: flex;
@@ -297,7 +309,7 @@ body{
     content: "";
     width: 100%;
     height: 1px;
-    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);;
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
     position: absolute;
     bottom: 0;
 }
@@ -327,7 +339,21 @@ body{
 }
 .principleImage{
     max-width: 645px;
+    max-height: 592px;
     min-width: 350px;
+    min-height: 300px;
+    overflow: hidden;
+    position: relative;
+}
+.principleImage:hover img{
+    scale: 1.02;
+}
+.principleImage img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all 0.2s;
 }
 .principleName{
     font-size: clamp(15px, 1.5vw ,18px);
@@ -336,6 +362,62 @@ body{
 }
 
 
+.educationContainer{
+    width: 100%;
+    margin-top: 65px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 24px;
+    padding: 0px 100px 120px 100px;
+    position: relative;
+}
+.educationTitle{
+    font-size: 56px;
+    font-weight: 500;
+    font-family: "ER_Garamond_Medium";
+}
+.educationCardsContainer{
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    gap: 40px;
+}
+.educationImage{
+    height: 300px;
+    object-fit: cover;
+    overflow: hidden;
+}
+.educationImage:hover img{
+    scale: 1.02;
+}
+.educationImage img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: all 0.25s;
+}
+.educationName{
+    font-size: 38px;
+    font-weight: 500;
+    font-family: "ER_Garamond_Medium";
+    padding: 12px 0px 12px 0px;
+    position: relative;
+    width: 100%;
+}
+.educationLine{
+    height: 1px;
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
+    margin-bottom: 10px;
+    padding-right: 20px;
+}
+.educationDescription{
+    font-size: 18px;
+    color: #484848;
+    font-family: 'DM_Sans_Regular';
+    line-height: 170%;
+    padding-right: 20px;
+}
 
 @media screen and (max-width: 1070px){
     .menu{
@@ -358,6 +440,12 @@ body{
     .communityImage{
         width: 600px;
         height: 400px;
+        overflow: hidden;
+    }
+    .communityImage img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
     .communityStatsContainer{
         gap: 4px;
@@ -398,10 +486,24 @@ body{
     }
     .principleImage{
         max-width: 387px;
+        max-height: 330px;
         min-width: 350px;
+        min-height: 300px;
+        overflow: hidden;
+        position: relative;
+    }
+    .principleImage img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
     }
     .principleName{
         font-size: clamp(15px, 1.5vw ,17px);
+    }
+    .educationContainer{
+        padding: 0px 70px 120px 70px;
+        position: relative;
     }
 }
 
@@ -487,6 +589,16 @@ body{
     .communityImage{
         width: 100%;
         height: auto;
+        overflow: hidden;
+    }
+    .communityImage img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .communityImage{
+        width: 100%;
+        height: auto;
     }
     .communityStatsContainer{
         gap: 4px;
@@ -523,8 +635,16 @@ body{
     }
     .principleImage{
         max-width: 100%;
+        max-height: 800px;
         min-width: 100%;
+        overflow: hidden;
+        position: relative;
+    }
+    .principleImage img{
         width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
     }
     .principleName{
         font-size: 17px;
@@ -533,7 +653,10 @@ body{
         width: 85px;
         transform: translateX(-20px) translateY(-50px);
     }
-    
+    .educationContainer{
+        padding: 0px 50px 120px 50px;
+        position: relative;
+    }
 }
 
 
@@ -613,6 +736,12 @@ body{
     .communityImage{
         width: 100%;
         height: auto;
+        overflow: hidden;
+    }
+    .communityImage img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
     .communityStatsContainer{
         gap: 4px;
@@ -650,8 +779,17 @@ body{
     }
     .principleImage{
         max-width: 100%;
+        max-height: 800px;
         min-width: 100%;
+        overflow: hidden;
+        position: relative;
+    }
+    .principleImage img{
         width: 100%;
+        height: 100%;
+        position: absolute;
+        object-fit: cover;
+        object-position: center;
     }
     .principleName{
         padding-left: 5px;
@@ -662,6 +800,34 @@ body{
         width: 68px;
         transform: translateX(-6px) translateY(-36px);
     }
+    .educationContainer{
+        padding: 0px 20px 80px 20px;
+        position: relative;
+    }
+    .educationTitle{
+        font-size: 34px;
+    }
+    .educationImage{
+        height: 280px;
+        object-fit: cover;
+        overflow: hidden;
+    }
+    .educationName{
+        font-size: 32px;
+        padding: 10px 0px 10px 5px;
+    }
+    .educationLine{
+        padding-left: 5px;
+    }
+    .educationDescription{
+        padding-left: 5px;
+        font-size: 16px;
+        color: #484848;
+        font-family: 'DM_Sans_Regular';
+        line-height: 170%;
+        padding-right: 20px;
+    }
+
 }   
 
 
