--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -34,6 +34,28 @@ body{
     position: relative;
     height: 10000px;
 }
+
+.appContainer{
+    opacity: 0;
+}
+.appearDocument{
+    animation-name: appearDocument;
+    animation-duration: 0.6s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+}
+@keyframes appearDocument {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+
+    }
+}
+
+
 .menuContainer{
     z-index: 1000;
     top: 0;
