--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -679,6 +679,9 @@ body{
         padding: 0px 50px 120px 50px;
         position: relative;
     }
+    .educationImage{
+        height: 320px;
+    }
 }
 
 
@@ -823,16 +826,21 @@ body{
         transform: translateX(-6px) translateY(-36px);
     }
     .educationContainer{
+        gap: 10px;
         padding: 0px 20px 80px 20px;
         position: relative;
+    }
+    .educationCardsContainer{
+        display: grid;
+        width: 100%;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 40px;
     }
     .educationTitle{
         font-size: 34px;
     }
     .educationImage{
         height: 280px;
-        object-fit: cover;
-        overflow: hidden;
     }
     .educationName{
         font-size: 32px;
