--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -74,7 +74,7 @@ body{
     justify-content: space-between;
     height: 100px;
     padding: 0px 100px;
-    background-color: rgba(255, 255, 255, 0.96);
+    background-color: rgba(255, 255, 255, 0.98);
     box-shadow: 0px 4px 8px 0px rgba(170, 170, 170, 0.1);
 }
 .menu:after{
@@ -399,18 +399,32 @@ body{
     font-weight: 500;
     font-family: "ER_Garamond_Medium";
 }
+.educationCard:hover .educationName::after{
+    width: 100%;
+}
+.educationName::after{
+    content: '';
+    height: 3px;
+    width: 0%;
+    margin-bottom: 12px;
+    background-color: rgb(0, 0, 0);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: all 0.25s ease-in-out;
+}
 .educationCardsContainer{
     display: grid;
     width: 100%;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    gap: 40px;
+    gap: 30px;
 }
 .educationImage{
-    height: 300px;
+    height: 280px;
     object-fit: cover;
     overflow: hidden;
 }
-.educationImage:hover img{
+.educationCard:hover .educationImage img{
     scale: 1.02;
 }
 .educationImage img{
@@ -420,25 +434,145 @@ body{
     transition: all 0.25s;
 }
 .educationName{
+    width: fit-content;
     font-size: 38px;
+    padding-left: 5px;
     font-weight: 500;
     font-family: "ER_Garamond_Medium";
     padding: 12px 0px 12px 0px;
     position: relative;
-    width: 100%;
 }
 .educationLine{
+    padding-left: 5px;
     height: 1px;
     background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
     margin-bottom: 10px;
     padding-right: 20px;
 }
 .educationDescription{
+    padding-left: 5px;
     font-size: 18px;
     color: #484848;
     font-family: 'DM_Sans_Regular';
     line-height: 170%;
     padding-right: 20px;
+}
+
+
+.clubsContainer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 24px;
+    padding: 0px 100px 100px 100px;
+    position: relative;
+}
+.clubsTitle{
+    font-size: 56px;
+    font-weight: 500;
+    font-family: "ER_Garamond_Medium";
+}
+.clubsMovementContainer{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    width: 100%;
+    height: fit-content;
+    position: relative;
+    overflow-X: scroll;
+    padding-bottom: 20px;
+    scrollbar-color: rgb(207, 207, 207) white;
+    scrollbar-width:thin;
+}
+.clubsCardsContainer{
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    gap: 30px;
+}
+.clubCard{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.clubCard:hover .clubImage img{
+    scale: 1.02;
+}
+.clubImage{
+    overflow: hidden;
+    width: 380px;
+    height: 230px;
+}
+.clubImage img{
+    will-change: transform;
+    transition: all 0.25s;
+    height: 100%;
+    width: 100%;
+    object-position: center;
+    object-fit: cover;
+}
+.clubTextContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    background-color: #f8f8f8;
+    width: 380px;
+    height: 300px;
+    padding: 12px 25px;
+}
+.clubCardTitle{
+    width: fit-content;
+    font-size: 36px;
+    font-weight: 500;
+    font-family: 'ER_Garamond_Medium';
+    transition: all 0.1s;
+    position: relative;
+}
+.clubCardTitle::after{
+    content: '';
+    height: 3px;
+    width: 0%;
+    margin-bottom: 0px;
+    background-color: rgb(0, 0, 0);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: all 0.25s ease-in-out;
+}
+.clubCard:hover .clubTextContainer .clubCardTitle::after{
+    width: 100%;
+}
+.clubLine{
+    height: 1px;
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
+}
+.clubDescription{
+    font-size: 17px;
+    font-family: "DM_Sans_Regular";
+    line-height: 170%;
+    color: #484848;
+}
+.redCross{
+    background-color: #f10e0e;
+    color: white;
+}
+.redCross .clubLine{
+    background: linear-gradient(to right, #ffffff00, #ffffff, #ffffff00);
+}
+.redCross .clubDescription{
+    color: white;
+}
+.redCross .clubCardTitle::after{
+    content: '';
+    height: 3px;
+    width: 0%;
+    margin-bottom: 0px;
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: all 0.25s ease-in-out;
 }
 
 @media screen and (max-width: 1070px){
@@ -527,6 +661,9 @@ body{
         padding: 0px 70px 120px 70px;
         position: relative;
     }
+    .clubsContainer{
+        padding: 0px 70px 100px 70px;
+    }
 }
 
 
@@ -588,9 +725,25 @@ body{
     .expandableMenuLinks{
         font-size: 36px;
         letter-spacing: 1px;
+        width: fit-content;
         color: white;
         font-family: "ER_Garamond_Medium";
+        position: relative;
     }
+    .expandableMenuLinks p::after{
+        content: '';
+        height: 3px;
+        width: 0%;
+        margin-bottom: -2px;
+        background-color: rgb(255, 255, 255);
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        transition: all 0.25s ease-in-out;
+    }
+    .expandableMenuLinks:hover p::after{
+        width: 100%;
+    } 
 
 
     .communityContainer{
@@ -681,6 +834,9 @@ body{
     }
     .educationImage{
         height: 320px;
+    }
+    .clubsContainer{
+        padding: 0px 50px 100px 50px;
     }
 }
 
@@ -858,6 +1014,52 @@ body{
         padding-right: 20px;
     }
 
+    .clubsContainer{
+        padding: 0px 20px 50px 20px;
+    }
+    .clubsTitle{
+        font-size: 34px;
+    }
+    .clubCardTitle{
+        font-size: 32px;
+    }
+    .clubDescription{
+        font-size: 16px;
+    }
+    .clubImage{
+        width: 300px;
+        height: 200px;
+    }
+    .clubTextContainer{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        background-color: #f8f8f8;
+        width: 300px;
+        height: 294px;
+        padding: 12px 25px;
+    }
+    .redCross{
+        background-color: #f10e0e;
+        color: white;
+    }
+    .redCross .clubLine{
+        background: linear-gradient(to right, #ffffff00, #ffffff, #ffffff00);
+    }
+    .redCross .clubDescription{
+        color: white;
+    }
+    .redCross .clubCardTitle::after{
+        content: '';
+        height: 3px;
+        width: 0%;
+        margin-bottom: 0px;
+        background-color: rgb(255, 255, 255);
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        transition: all 0.25s ease-in-out;
+    } 
 }   
 
 
