--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -1014,7 +1014,10 @@ body{
         padding-right: 20px;
     }
 
+
+
     .clubsContainer{
+        gap: 10px;
         padding: 0px 20px 50px 20px;
     }
     .clubsTitle{
