--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -581,7 +581,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: start;
-    gap: 24px;
+    gap: 10px;
     padding: 0px 100px 100px 100px;
     position: relative;
 }
@@ -1066,6 +1066,13 @@ body{
     .historyContainer{
         padding: 0px 50px 55px 50px;
     }
+    .historyTextOne{
+        padding: 0px 5px;
+    }
+
+    .historyTextTwo{
+        padding: 0px 5px;
+    }
 }
 
 
@@ -1297,6 +1304,18 @@ body{
     }
     .historyContainer{
         padding: 0px 20px 55px 20px;
+    }
+    .historyImages{
+        height: fit-content;
+    }
+    .historyImagesContainer{
+        height: 200px;
+    }
+    .historyTextOne{
+        padding: 0px 5px;
+    }
+    .historyTextTwo{
+        padding: 0px 5px;
     }
 }   
 
