--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -1323,6 +1323,7 @@ body{
     .historyTextOne{
         margin-top: 0px;
         font-size: 16px;
+        margin-bottom: 30px;
         padding: 0px 5px;
     }
     .historyTextTwo{
