--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -753,6 +753,68 @@ body{
     transition: all 0.25s;
 }
 
+.galleryContainer{
+    display: flex;
+    flex-direction: column;
+    padding: 0px 100px;
+    gap: 28px;
+}
+.galleryTitle{
+    font-size: 56px;
+    font-weight: 500;
+    font-family: "ER_Garamond_Medium";
+}
+.galleryGrid{
+    width: 100%;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 1fr 356px;
+    grid-template-rows: 238px 238px 568px;
+}
+.galleryBig{
+    grid-column: 1/3;
+    grid-row: 1/3;
+}
+.galleryTop{
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+.galleryBottom{
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+.gallerySlider{
+    gap: 30px;
+    grid-column: 1/4;
+    grid-row: 3/4;
+    overflow-y: scroll;
+    overflow-y: hidden;
+    padding-bottom: 14px;
+    scrollbar-color: rgb(207, 207, 207) white;
+    height: 375px;
+}
+.galleryInnerSlider{
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+    padding-bottom: 14px;
+}
+.gallerySliderImg{
+    width: 530px;
+    height: 375px;
+    padding-bottom: 20px;
+    overflow: hidden;
+}
+.galleryContainer img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+
 @media screen and (max-width: 1070px){
     .menu{
         padding: 0px 70px;
@@ -945,6 +1007,62 @@ body{
     object-position: center;
     object-fit: cover;
 }
+
+.galleryContainer{
+    display: flex;
+    flex-direction: column;
+    padding: 0px 70px;
+    gap: 28px;
+}
+.galleryGrid{
+    width: 100%;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 500px 350px 350px;
+}
+.galleryBig{
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+.galleryTop{
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+.galleryBottom{
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+.gallerySlider{
+    gap: 30px;
+    grid-column: 1/3;
+    grid-row: 3/4;
+    overflow-y: scroll;
+    overflow-y: hidden;
+    padding-bottom: 14px;
+    scrollbar-color: rgb(207, 207, 207) white;
+    height: 350px;
+}
+.galleryInnerSlider{
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+    padding-bottom: 14px;
+}
+.gallerySliderImg{
+    width: 530px;
+    height: 350px;
+    padding-bottom: 20px;
+    overflow: hidden;
+}
+.galleryContainer img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 }
 
 
@@ -1133,8 +1251,89 @@ body{
     .historyTextTwo{
         padding: 0px 5px;
     }
+
+    .galleryContainer{
+        padding: 0px 50px;
+        gap: 28px;
+    }
+.galleryGrid{
+    width: 100%;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 450px 200px 300px;
+}
+.galleryBig{
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+.galleryTop{
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+.galleryBottom{
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+.gallerySlider{
+    gap: 30px;
+    grid-column: 1/3;
+    grid-row: 3/4;
+    overflow-y: scroll;
+    overflow-y: hidden;
+    padding-bottom: 14px;
+    scrollbar-color: rgb(207, 207, 207) white;
+    height: 300px;
+}
+.gallerySliderImg{
+    width: 450px;
+    height: 300px;
+    padding-bottom: 20px;
+    overflow: hidden;
+}
 }
 
+@media screen and (max-width: 700px){
+    .galleryContainer{
+        padding: 0px 50px;
+        gap: 28px;
+    }
+.galleryGrid{
+    width: 100%;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 300px 300px 300px 300px;
+}
+.galleryBig{
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+.galleryTop{
+    grid-column: 1/3;
+    grid-row: 2/3;
+}
+.galleryBottom{
+    grid-column: 1/3;
+    grid-row: 3/4;
+}
+.gallerySlider{
+    gap: 30px;
+    grid-column: 1/3;
+    grid-row: 4/5;
+    overflow-y: scroll;
+    overflow-y: hidden;
+    padding-bottom: 14px;
+    scrollbar-color: rgb(207, 207, 207) white;
+    height: 300px;
+}
+.gallerySliderImg{
+    width: 450px;
+    height: 300px;
+    padding-bottom: 20px;
+    overflow: hidden;
+}
+}
 
 @media screen and (max-width: 500px){
     .menu{
@@ -1363,7 +1562,18 @@ body{
         font-size: 34px;
     }
     .historyContainer{
-        padding: 0px 20px 55px 20px;
+        padding: 0px 20px 110px 20px;
+        position: relative;
+    }
+    .historyContainer::after{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        content: '';
+        height: 1px;
+        width: 100%;
+        background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);;
+        margin-bottom: 55px;
     }
     .historyImages{
         height: fit-content;
@@ -1386,6 +1596,49 @@ body{
 
     .headerContainer{
         height: 580px;
+    }
+
+    .galleryTitle{
+        font-size: 34px;
+    }
+    .galleryContainer{
+        padding: 0px 20px;
+        gap: 14px;
+    }
+    .galleryGrid{
+        width: 100%;
+        display: grid;
+        gap: 20px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 280px 200px 200px 280px;
+    }
+    .galleryBig{
+        grid-column: 1/3;
+        grid-row: 1/2;
+    }
+    .galleryTop{
+        grid-column: 1/3;
+        grid-row: 2/3;
+    }
+    .galleryBottom{
+        grid-column: 1/3;
+        grid-row: 3/4;
+    }
+    .gallerySlider{
+        gap: 30px;
+        grid-column: 1/3;
+        grid-row: 4/5;
+        overflow-y: scroll;
+        overflow-y: hidden;
+        padding-bottom: 14px;
+        scrollbar-color: rgb(207, 207, 207) white;
+        height: 280px;
+    }
+    .gallerySliderImg{
+        width: 350px;
+        height: 280px;
+        padding-bottom: 20px;
+        overflow: hidden;
     }
 }   
 
