--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -1668,6 +1668,7 @@ body{
         animation-timing-function: ease-out;
         animation-fill-mode: forwards;
         animation-iteration-count: 1;
+        position: relative;
     }
     @keyframes turnMenuBlack{
         0%{
@@ -1692,7 +1693,7 @@ body{
             background-color: #ffffff;
         }
     }
-    .turnMenuBlack:after{
+    .turnMenuBlack::after{
         content: '';
         width: 100%;
         height: 1px;
