--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -36,7 +36,6 @@ a{
 body{
     overflow-x: hidden;
     position: relative;
-    height: 10000px;
 }
 
 .appContainer{
@@ -757,14 +756,14 @@ body{
     display: flex;
     position: relative;
     flex-direction: column;
-    padding: 0px 100px 200px 100px;
+    padding: 0px 100px 150px 100px;
     gap: 28px;
 }
 .galleryContainer::after{
     content: '';
     height: 1px;
     width: 100%;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
     bottom: 0;
     left: 0;
     position: absolute;
@@ -969,8 +968,109 @@ body{
 }
 
 
-
-
+.footerContainer{
+    background-color: #0B0B0B;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 226px 100px 80px 100px;
+    width: 100%;
+    gap: 80px;
+}
+.footerBottom{
+    width: 100%;
+    display: grid;
+    align-content: end;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.copyright{
+    grid-column: 1/2;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    font-size: 16px;
+    font-family: 'DM_Sans_Medium';
+    color: #808080;
+}
+.footerSocialMedias{
+    grid-column: 3/4;
+    display: flex;
+    height: 100%;
+    right: 0;
+    bottom: 0;
+    flex-direction: row;
+    justify-content: end;
+    align-items: flex-end;
+    align-self: end;
+    gap: 35px;
+}
+.footerLogo{
+    grid-column: 2/3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+}
+.footerSchoolLogo{
+    width: 74px;
+}
+.footerNameLogo{
+    width: 212px;
+}
+.socials{
+    width: 47px;
+    cursor: pointer;
+    transition: all 0.1s;
+}
+.socials:hover{
+    filter: brightness(150%);
+}
+.gridFooterLinks{
+    display: grid;
+    gap: 70px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.footerGroup{
+    display: flex;
+    flex-direction: row;
+    gap: 95px;
+}
+.footerLinks{
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+}
+.mainLink{
+    font-size: 18px;
+    color: white;
+    font-family: 'DM_Sans_ExtraBold';
+    cursor: pointer;
+}
+.secondaryLinks{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.secondaryLink{
+    font-size: 18px;
+    font-family: 'DM_Sans_Medium';
+    color: #808080;
+    cursor: pointer;
+    transition: all 0.1s;
+}
+.secondaryLink:hover{
+    color: white;
+}
+.footerLine{
+    height: 100%;
+    width: 1px;
+    background: linear-gradient(to top, #ffffff00, rgba(202, 202, 202, 0.3), #ffffff00);
+}
 
 
 
@@ -1224,7 +1324,7 @@ body{
 .galleryContainer{
     display: flex;
     flex-direction: column;
-    padding: 0px 70px 200px 70px;
+    padding: 0px 70px 150px 70px;
     gap: 28px;
 }
 .galleryGrid{
@@ -1343,7 +1443,85 @@ body{
 }
 
 
+.footerContainer{
+    background-color: #0B0B0B;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 226px 70px 80px 70px;
+    width: 100%;
+    gap: 80px;
 }
+.footerBottom{
+    width: 100%;
+    display: grid;
+    align-content: end;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.copyright{
+    grid-column: 1/2;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    font-size: 15px;
+    font-family: 'DM_Sans_Medium';
+    color: #808080;
+}
+.footerSocialMedias{
+    grid-column: 3/4;
+    display: flex;
+    height: 100%;
+    right: 0;
+    bottom: 0;
+    flex-direction: row;
+    justify-content: end;
+    align-items: flex-end;
+    align-self: end;
+    gap: 35px;
+}
+.footerLogo{
+    grid-column: 2/3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+}
+.footerSchoolLogo{
+    width: 55px;
+}
+.footerNameLogo{
+    width: 180px;
+}
+.socials{
+    width: 40px;
+    cursor: pointer;
+    transition: all 0.1s;
+}
+.socials:hover{
+    filter: brightness(150%);
+}
+.gridFooterLinks{
+    display: grid;
+    gap: 70px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.footerGroup{
+    display: flex;
+    flex-direction: row;
+    gap: 95px;
+}
+
+}
+
+
+
+
+
 
 
 @media screen and (max-width: 950px){
@@ -1533,7 +1711,7 @@ body{
     }
 
     .galleryContainer{
-        padding: 0px 50px 200px 50px;
+        padding: 0px 50px 150px 50px;
         gap: 28px;
     }
 .galleryGrid{
@@ -1656,6 +1834,92 @@ body{
     justify-content: center;
     position: relative;
 }
+
+.footerContainer{
+    background-color: #0B0B0B;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 160px 50px 80px 50px;
+    width: 100%;
+    gap: 80px;
+}
+.footerBottom{
+    width: 100%;
+    display: grid;
+    justify-items: center;
+    height: fit-content;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    height: 280px;
+}
+.copyright{
+    text-align: center;
+    width: 170px;
+    line-height: 170%;
+    grid-column: 1/2;
+    grid-row: 3/4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 16px;
+    height: fit-content;
+    font-family: 'DM_Sans_Medium';
+    color: #808080;
+}
+.footerSocialMedias{
+    grid-column: 1/2;
+    grid-row: 2/3;
+    display: flex;
+    height: fit-content;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    gap: 35px;
+}
+.footerLogo{
+    grid-column: 1/2;
+    grid-row: 1/2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+}
+.footerSchoolLogo{
+    width: 60px;
+}
+.footerNameLogo{
+    width: 200px;
+}
+.socials{
+    width: 44px;
+    cursor: pointer;
+    transition: all 0.1s;
+}
+.socials:hover{
+    filter: brightness(150%);
+}
+.gridFooterLinks{
+    display: grid;
+    gap: 50px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.footerGroup{
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+}
+.mainLink{
+    font-size: 17px;
+}
+.secondaryLink{
+    font-size: 17px;
+}
+
 
 
 }
@@ -2110,6 +2374,92 @@ body{
     align-items: center;
     justify-content: center;
     position: relative;
+}
+
+
+.footerContainer{
+    background-color: #0B0B0B;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 100px 30px 80px 30px;
+    width: 100%;
+    gap: 80px;
+}
+.footerBottom{
+    width: 100%;
+    display: grid;
+    justify-items: center;
+    height: fit-content;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    height: 270px;
+}
+.copyright{
+    text-align: center;
+    width: 170px;
+    line-height: 170%;
+    grid-column: 1/2;
+    grid-row: 3/4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 15px;
+    height: fit-content;
+    font-family: 'DM_Sans_Medium';
+    color: #808080;
+}
+.footerSocialMedias{
+    grid-column: 1/2;
+    grid-row: 2/3;
+    display: flex;
+    height: fit-content;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    gap: 25px;
+}
+.footerLogo{
+    grid-column: 1/2;
+    grid-row: 1/2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+}
+.footerSchoolLogo{
+    width: 50px;
+}
+.footerNameLogo{
+    width: 160px;
+}
+.socials{
+    width: 40px;
+    cursor: pointer;
+    transition: all 0.1s;
+}
+.socials:hover{
+    filter: brightness(150%);
+}
+.gridFooterLinks{
+    display: grid;
+    gap: 50px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.footerGroup{
+    display: flex;
+    flex-direction: row;
+    gap: 25px;
+}
+.mainLink{
+    font-size: 15px;
+}
+.secondaryLink{
+    font-size: 15px;
 }
 
 
