--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -2331,7 +2331,7 @@ body{
 
 
 .testimoniesContainer{
-    padding: 0px 20px 115px 20px;
+    padding: 0px 20px 100px 20px;
     gap: 50px;
     width: 100%;
 }
@@ -2426,7 +2426,7 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding: 100px 30px 80px 30px;
+    padding: 100px 30px 60px 30px;
     width: 100%;
     gap: 80px;
 }
@@ -2441,7 +2441,8 @@ body{
 }
 .copyright{
     text-align: center;
-    width: 170px;
+    max-width: 270px;
+    min-width: 100px;
     line-height: 170%;
     grid-column: 1/2;
     grid-row: 3/4;
